--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "site de recettes de cuisine",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch App/scss/style.scss:App/css/style.css -w --style compressed",
+    "sass": "sass --watch App/scss/style.scss:App/css/style.css -w --style expanded",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
